# resume-optimizer-arab-backend

./: .dockerignore  .env.prod.gpg  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_create_job.py  test_payload.json
.github/workflows/: deploy.yml
apps/api-gateway_service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api-gateway_service/alembic/: env.py
apps/api-gateway_service/alembic/versions/: 0001_initial.py
apps/api-gateway_service/app/: main.py
apps/api-gateway_service/app/db/: models.py
apps/parser-proxy_service/: .env.example  Dockerfile  README.md  pyproject.toml
apps/parser-proxy_service/app/: __init__.py  main.py
apps/worker-orchestrator_service/: .env.example  Dockerfile  README.md  pyproject.toml
apps/worker-orchestrator_service/app/: __init__.py  main.py
docs/: chapter5_gap_analysis.md  make_gpg.md
libs/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
libs/auth/: __init__.py  dependencies.py  models.py
libs/common/: __init__.py  config.py  error_handler.py  exceptions.py  logging.py  rate_limit.py  redis.py  supabase.py
libs/db/: config.py  session.py
methodology/: diagram_erd.mmd  diagram_high_level.mmd  diagram_sequence.mmd  diagram_services.mmd  diagrams.html  methodology.md
scripts/: db.sh  db_manage.py  provision_droplet.sh
services/gateway_service/: Dockerfile  requirements.txt
services/gateway_service/app/: main.py
services/gateway_service/app/routers/: jobs.py  uploads.py
services/gateway_service/app/schemas/: job_schemas.py
services/orchestrator_service/: Dockerfile  alembic.ini  requirements.txt
services/orchestrator_service/alembic/: env.py  script.py.mako
services/orchestrator_service/alembic/versions/: .keep  aee8ffda7711_make_resume_ids_nullable.py  c2a3b4d5e6f7_change_task_queue_payload_to_jsonb.py
services/orchestrator_service/app/: main.py  worker.py
services/parser_service/: Dockerfile  requirements.txt
services/parser_service/alembic/: env.py
services/parser_service/app/: main.py
traefik/: dynamic.yml
(+11 files in other folders)
