[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway-service"
version = "0.0.1"
description = "Public FastAPI API gateway for SmartResume Match"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.23,<1",
  "httpx>=0.25,<1",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "supabase>=2.3,<3",
  "openai>=1.30,<2",
  "pinecone-client>=3.0,<4",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.1,<4",
  "python-multipart>=0.0.9,<0.1",
  "loguru>=0.7,<0.8",
  "python-jose[cryptography]>=3.3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
]

[tool.setuptools.packages.find]
where = ["app"]
